--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ body{
 box-sizing: border-box;
 margin: 0;
 padding: 0;
-background-image: url(../imagenes/fondo3.jpg);
+background-image: url(../imagenes/fondo12.jpg);
 background-size: 100%;
 
 }
@@ -23,4 +23,12 @@ width: 300px;
 }
 .avatar{
   margin-bottom: 20px;
+}
+
+
+
+.boton-face .btn-primary:hover, .formulario form p .btn-primary:hover {
+    color: #007bff!important;
+    background-color: #fff!important;
+    border-color: #007bff!important;
 }
