--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,23 @@
+header{
+  background-color: #00c0d1;
+  height: 60px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+header div{
+  max-width: 100%;
+
+}
+
+header div a .logo{
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
 .form-login{
   margin-top: 100px;
 }
@@ -31,4 +51,13 @@ width: 300px;
     color: #007bff!important;
     background-color: #fff!important;
     border-color: #007bff!important;
+}
+
+footer{
+  background: #fff;
+  justify-content: center;
+  font-size: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
 }
