--- a/css/preguntas.css
+++ b/css/preguntas.css
@@ -15,7 +15,7 @@ body{
 }
 
 .bg-light {
-    background-color: #00c0d1!important;
+    background-color:#adf0f0!important;
 }
 
 #navbarSupportedContent{
@@ -56,14 +56,21 @@ main{
   list-style: none;
 }
 
-
 footer{
+  display: flex;
+}
+
+.footer{
   background: #fff;
   justify-content: center;
   font-size: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
-
+  padding-left: 35%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 @media (max-width:700px) {
@@ -71,7 +78,8 @@ footer{
     display: none;
   }
 
-  footer{
+  .footer{
     font-size: 10px;
+    padding-left: 20px;
   }
 }
