--- a/css/Registro.css
+++ b/css/Registro.css
@@ -40,7 +40,9 @@ form.needs-validation {
   }
 
 div.form-row label{
-font-weight: bold;
+  font-weight: bold;
+  color:#1e4261;
+  font-family: 'Signika', sans-serif;
 }
 
 
