--- a/css/preguntas.css
+++ b/css/preguntas.css
@@ -108,8 +108,9 @@ footer{
     font-size: 25px!important;
   }
 
-  .footer{
+  footer .footer{
     font-size: 10px;
-    padding-left: 20px;
+    text-align: left;
+    padding-left: 20px!important;
   }
 }
