--- a/css/login.css
+++ b/css/login.css
@@ -49,14 +49,14 @@ width: 300px;
   margin-bottom: 20px;
 }
 
-.boton-face .btn-primary:hover, .formulario form p .btn-primary:hover {
-    color: #007bff!important;
+.boton-face .btn-primary:hover .btn-primary:hover {
+    color: #007bff;
     background-color: #fff!important;
     border-color: #007bff!important;
 }
 .linea-texto{
   margin-bottom: 20px;
-  margin-top: 20px;   
+  margin-top: 20px;
 }
 
 footer{
@@ -75,6 +75,16 @@ footer{
   position: fixed;
 }
 
+span.errorEmail{
+  color: red;
+  font-size: 14px;
+
+}
+
+span.errorContraseña{
+  color: red;
+  font-size: 14px;
+}
 @media (max-width:665px) {
 
   .footer{
