se trabajo sobre el nav

--- a/css/Registro.css
+++ b/css/Registro.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: lightblue;
-  margin-left: 30%;
+  margin-left: 10%;
+  margin-bottom: 5%;
   background-image: url(../imagenes/fondo12.jpg);
   background-position: center center;
   background-repeat: no-repeat;
@@ -13,29 +14,70 @@ body {
 }
 
 header{
-  background-color: #adf0f0;
-  height: 60px;
-  font-weight: bold;
-  padding: 5px;
+  position: fixed;
+  margin-left: 0px!important;
+  margin-right: 0px!important;
+  left: 0px;
+  width: 100%;
+  z-index: 100;
 }
 
-header div{
-  max-width: 100%;
+.bg-light{
+    width: 100%!important;
+    background: #337cc4!important;
+    width: 100%!important;
+  }
 
+header .navbar-expand-lg{
+      margin-left: 0px!important;
+
+  }
+
+header nav .navbar-brand{
+    color: white!important;
+    font-family: 'Signika', sans-serif !important;
+
+  }
+
+
+header nav ul li a {
+  background: #337cc4!important;
+  color: white!important;
+  font-family: 'Signika', sans-serif;
+  margin-left: 70px;
 }
 
-header div a .logo{
+header nav ul li a:hover {
+
+  background: #fff!important;
+  color: #337cc4!important;
+  }
+
+header nav div form .btn-outline-success{
+    background: #007bff!important;
+    border-color: solid 0.5px rgba(255, 255, 255, 0.5)!important;
+    color: white!important;
+    font-family: 'Signika', sans-serif;
+  }
+
+header nav div form .btn-outline-success:hover{
+    background-color: white!important;
+    border-color: #007bff!important;
+    color: #007bff!important;
+
+  }
+
+header nav a .logo{
   height: 50px;
   justify-content: center;
   align-items: center;
-  padding-left: 20px;
 
 }
 
 form.needs-validation {
   padding: 20px;
   text-align: center;
-  padding-top: 50px!important;
+  padding-top: 100px!important;
   padding-bottom: 0px!important;
   padding: 10%;
   }
@@ -95,6 +137,38 @@ footer{
 }
 
 @media (max-width:545px){
+
+  header nav .navbar-brand{
+    font-size: 25px;
+    margin-bottom: 3px;
+
+  }
+
+  header nav .navbar-toggler{
+    border-color: white!important;
+  }
+
+  header nav button .navbar-toggler-icon{
+    color: white!important;
+  }
+
+  header nav ul li a{
+    width: 100%;
+    height: 36px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3)!important;
+
+
+  }
+
+  header nav ul li #HOME, #REGISTRATE, #LOGIN{
+    padding-top: 12px!important;
+  }
+
+  header div .form-inline{
+    display: none!important;
+  }
   form.needs-validation{
     max-width: 100%;
     flex: 100%;
