--- a/css/home.css
+++ b/css/home.css
@@ -20,17 +20,50 @@ header nav{
       margin-right: 0px;
   }
 
+.bg-light{
+    width: 100%!important;
+    background: #337cc4!important;
+    width: 100%!important;
+
+  }
+
+header .navbar-expand-lg{
+      margin-left: 0px!important;
+
+  }
+
+header nav .navbar-brand{
+    color: white!important;
+    font-family: 'Signika', sans-serif !important;
+
+  }
+
 
 header nav ul li a {
   background: #337cc4!important;
   color: white!important;
   font-family: 'Signika', sans-serif;
+  margin-left: 70px;
 }
 
 header nav ul li a:hover {
 
   background: #fff!important;
   color: #337cc4!important;
+  }
+
+header nav div form .btn-outline-success{
+    background: #007bff!important;
+    border-color: solid 0.5px rgba(255, 255, 255, 0.5)!important;
+    color: white!important;
+    font-family: 'Signika', sans-serif;
+  }
+
+header nav div form .btn-outline-success:hover{
+    background-color: white!important;
+    border-color: #007bff!important;
+    color: #007bff!important;
+
   }
 
 main{
@@ -110,18 +143,53 @@ main div .btn-primary:hover{
 
 
 
-@media (max-width:600px) {
+@media (max-width:990px) {
 
+  body .container-fluid{
+    padding-top: 45px;
+    padding-bottom: 50px;
+  }
+
+  header .navbar-expand-lg{
+    position: fixed;
+    z-index: 100;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    margin-left: 0px!important;
+  }
+
+
+  header nav .navbar-brand{
+    font-size: 25px;
+    margin-bottom: 3px;
+
+  }
+
+  header nav .navbar-toggler{
+    border-color: white!important;
+  }
+
+  header nav button .navbar-toggler-icon{
+    color: white!important;
+  }
 
   header nav ul li a{
-    width: 80px;
+    width: 100%;
     height: 36px;
-    font-size: 7px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3)!important;
+
 
   }
 
   header nav ul li #HOME, #REGISTRATE, #LOGIN{
     padding-top: 12px!important;
+  }
+
+  header div .form-inline{
+    display: none!important;
   }
 
 
