--- a/css/Registro.css
+++ b/css/Registro.css
@@ -83,10 +83,11 @@ form.needs-validation {
   }
 
 form.needs-validation div h1{
-  font-family: 'Satisfy', cursive!important;
+  font-family: 'Alatsi', sans-serif!important;
   font-size: 60px;
   color:#1e4261;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+  margin-top: 30px;
 }
 
 div.form-row label{
