--- a/css/Registro.css
+++ b/css/Registro.css
@@ -83,7 +83,7 @@ form.needs-validation {
   }
 
 form.needs-validation div h1{
-  font-family: 'Alatsi', sans-serif!important;
+  font-family: 'Satisfy', cursive!important;
   font-size: 60px;
   color:#1e4261;
   margin-bottom: 50px;
