--- a/css/preguntas.css
+++ b/css/preguntas.css
@@ -103,6 +103,7 @@ main div p{
 
 footer{
   display: flex;
+  margin-top: 100px;
 }
 
 .footer{
@@ -116,7 +117,7 @@ footer{
   position: fixed;
   bottom: 0;
   left: 0;
-}
+  }
 
 @media (max-width:990px) {
 
