--- a/css/login.css
+++ b/css/login.css
@@ -22,6 +22,8 @@ header{
   width: 100%;
   z-index: 100;
   margin-bottom: 70px;
+  margin-left: 0px!important;
+  margin-right: 0px!important;
 
 }
 
@@ -89,8 +91,13 @@ h3{
   font-weight: normal;
 }
 
-.formulario .casillero{
+.formulario form p input.casillero{
 width: 300px;
+height: 40px;
+border-radius: 5px;
+color: #aba8a1;
+padding top: 6px!important;
+padding bottom: 6px!important;
 }
 .avatar{
   margin-bottom: 20px;
